ceng444/the1/e2172088/mygramParser.py
# Generated from mygram.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class mygramParser ( Parser ):

    grammarFileName = "mygram.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'fun'", "'endf'", "'('", "')'", 
                     "','", "'return'", "'if'", "'else if'", "'endi'", "'else'", 
                     "'while'", "'endw'", "'input'", "'output'", "'='", 
                     "'-'", "'+'", "'*'", "'/'", "'%'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "NUM", "Bop", "Lop", "Uop", 
                      "WS", "ID", "COMMENT" ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_defin = 2
    RULE_plist = 3
    RULE_idargs = 4
    RULE_clist = 5
    RULE_args = 6
    RULE_stmts = 7
    RULE_ret = 8
    RULE_iff = 9
    RULE_elsee = 10
    RULE_wh = 11
    RULE_io = 12
    RULE_cond = 13
    RULE_ass = 14
    RULE_e = 15
    RULE_t = 16
    RULE_f = 17

    ruleNames =  [ "prog", "stmt", "defin", "plist", "idargs", "clist", 
                   "args", "stmts", "ret", "iff", "elsee", "wh", "io", "cond", 
                   "ass", "e", "t", "f" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    NUM=22
    Bop=23
    Lop=24
    Uop=25
    WS=26
    ID=27
    COMMENT=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mygramParser.StmtContext)
            else:
                return self.getTypedRuleContext(mygramParser.StmtContext,i)


        def defin(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mygramParser.DefinContext)
            else:
                return self.getTypedRuleContext(mygramParser.DefinContext,i)


        def getRuleIndex(self):
            return mygramParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = mygramParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 40
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [mygramParser.T__6, mygramParser.T__7, mygramParser.T__11, mygramParser.T__13, mygramParser.T__14, mygramParser.ID]:
                    self.state = 36
                    self.stmt()
                    self.state = 37
                    self.match(mygramParser.T__0)
                    pass
                elif token in [mygramParser.T__1]:
                    self.state = 39
                    self.defin()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 42 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << mygramParser.T__1) | (1 << mygramParser.T__6) | (1 << mygramParser.T__7) | (1 << mygramParser.T__11) | (1 << mygramParser.T__13) | (1 << mygramParser.T__14) | (1 << mygramParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ass(self):
            return self.getTypedRuleContext(mygramParser.AssContext,0)


        def iff(self):
            return self.getTypedRuleContext(mygramParser.IffContext,0)


        def wh(self):
            return self.getTypedRuleContext(mygramParser.WhContext,0)


        def ret(self):
            return self.getTypedRuleContext(mygramParser.RetContext,0)


        def io(self):
            return self.getTypedRuleContext(mygramParser.IoContext,0)


        def getRuleIndex(self):
            return mygramParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = mygramParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 49
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [mygramParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.ass()
                pass
            elif token in [mygramParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.iff()
                pass
            elif token in [mygramParser.T__11]:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.wh()
                pass
            elif token in [mygramParser.T__6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 47
                self.ret()
                pass
            elif token in [mygramParser.T__13, mygramParser.T__14]:
                self.enterOuterAlt(localctx, 5)
                self.state = 48
                self.io()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefinContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(mygramParser.ID, 0)

        def plist(self):
            return self.getTypedRuleContext(mygramParser.PlistContext,0)


        def stmts(self):
            return self.getTypedRuleContext(mygramParser.StmtsContext,0)


        def getRuleIndex(self):
            return mygramParser.RULE_defin

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefin" ):
                listener.enterDefin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefin" ):
                listener.exitDefin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefin" ):
                return visitor.visitDefin(self)
            else:
                return visitor.visitChildren(self)




    def defin(self):

        localctx = mygramParser.DefinContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_defin)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(mygramParser.T__1)
            self.state = 52
            self.match(mygramParser.ID)
            self.state = 53
            self.plist()
            self.state = 54
            self.stmts()
            self.state = 55
            self.match(mygramParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idargs(self):
            return self.getTypedRuleContext(mygramParser.IdargsContext,0)


        def getRuleIndex(self):
            return mygramParser.RULE_plist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlist" ):
                listener.enterPlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlist" ):
                listener.exitPlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlist" ):
                return visitor.visitPlist(self)
            else:
                return visitor.visitChildren(self)




    def plist(self):

        localctx = mygramParser.PlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_plist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(mygramParser.T__3)
            self.state = 58
            self.idargs()
            self.state = 59
            self.match(mygramParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdargsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(mygramParser.ID)
            else:
                return self.getToken(mygramParser.ID, i)

        def ass(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mygramParser.AssContext)
            else:
                return self.getTypedRuleContext(mygramParser.AssContext,i)


        def getRuleIndex(self):
            return mygramParser.RULE_idargs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdargs" ):
                listener.enterIdargs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdargs" ):
                listener.exitIdargs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdargs" ):
                return visitor.visitIdargs(self)
            else:
                return visitor.visitChildren(self)




    def idargs(self):

        localctx = mygramParser.IdargsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_idargs)
        self._la = 0 # Token type
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [mygramParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 61
                    self.match(mygramParser.ID)
                    pass

                elif la_ == 2:
                    self.state = 62
                    self.ass()
                    pass


                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==mygramParser.T__5:
                    self.state = 65
                    self.match(mygramParser.T__5)
                    self.state = 68
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        self.state = 66
                        self.match(mygramParser.ID)
                        pass

                    elif la_ == 2:
                        self.state = 67
                        self.ass()
                        pass


                    self.state = 74
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [mygramParser.T__4]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def args(self):
            return self.getTypedRuleContext(mygramParser.ArgsContext,0)


        def getRuleIndex(self):
            return mygramParser.RULE_clist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClist" ):
                listener.enterClist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClist" ):
                listener.exitClist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClist" ):
                return visitor.visitClist(self)
            else:
                return visitor.visitChildren(self)




    def clist(self):

        localctx = mygramParser.ClistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_clist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(mygramParser.T__3)
            self.state = 79
            self.args()
            self.state = 80
            self.match(mygramParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def e(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mygramParser.EContext)
            else:
                return self.getTypedRuleContext(mygramParser.EContext,i)


        def getRuleIndex(self):
            return mygramParser.RULE_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs" ):
                listener.enterArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs" ):
                listener.exitArgs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgs" ):
                return visitor.visitArgs(self)
            else:
                return visitor.visitChildren(self)




    def args(self):

        localctx = mygramParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [mygramParser.T__3, mygramParser.NUM, mygramParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.e(0)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==mygramParser.T__5:
                    self.state = 83
                    self.match(mygramParser.T__5)
                    self.state = 84
                    self.e(0)
                    self.state = 89
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [mygramParser.T__4]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mygramParser.StmtContext)
            else:
                return self.getTypedRuleContext(mygramParser.StmtContext,i)


        def getRuleIndex(self):
            return mygramParser.RULE_stmts

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmts" ):
                listener.enterStmts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmts" ):
                listener.exitStmts(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmts" ):
                return visitor.visitStmts(self)
            else:
                return visitor.visitChildren(self)




    def stmts(self):

        localctx = mygramParser.StmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stmts)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 93
                self.stmt()
                self.state = 94
                self.match(mygramParser.T__0)
                self.state = 98 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << mygramParser.T__6) | (1 << mygramParser.T__7) | (1 << mygramParser.T__11) | (1 << mygramParser.T__13) | (1 << mygramParser.T__14) | (1 << mygramParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def e(self):
            return self.getTypedRuleContext(mygramParser.EContext,0)


        def getRuleIndex(self):
            return mygramParser.RULE_ret

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRet" ):
                listener.enterRet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRet" ):
                listener.exitRet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRet" ):
                return visitor.visitRet(self)
            else:
                return visitor.visitChildren(self)




    def ret(self):

        localctx = mygramParser.RetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ret)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(mygramParser.T__6)
            self.state = 101
            self.e(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IffContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cond(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mygramParser.CondContext)
            else:
                return self.getTypedRuleContext(mygramParser.CondContext,i)


        def stmts(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mygramParser.StmtsContext)
            else:
                return self.getTypedRuleContext(mygramParser.StmtsContext,i)


        def elsee(self):
            return self.getTypedRuleContext(mygramParser.ElseeContext,0)


        def getRuleIndex(self):
            return mygramParser.RULE_iff

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIff" ):
                listener.enterIff(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIff" ):
                listener.exitIff(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIff" ):
                return visitor.visitIff(self)
            else:
                return visitor.visitChildren(self)




    def iff(self):

        localctx = mygramParser.IffContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_iff)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(mygramParser.T__7)
            self.state = 104
            self.cond(0)
            self.state = 105
            self.stmts()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==mygramParser.T__8:
                self.state = 106
                self.match(mygramParser.T__8)
                self.state = 107
                self.cond(0)
                self.state = 108
                self.stmts()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.elsee()
            self.state = 116
            self.match(mygramParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ElseeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmts(self):
            return self.getTypedRuleContext(mygramParser.StmtsContext,0)


        def getRuleIndex(self):
            return mygramParser.RULE_elsee

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElsee" ):
                listener.enterElsee(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElsee" ):
                listener.exitElsee(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElsee" ):
                return visitor.visitElsee(self)
            else:
                return visitor.visitChildren(self)




    def elsee(self):

        localctx = mygramParser.ElseeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_elsee)
        try:
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [mygramParser.T__10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.match(mygramParser.T__10)
                self.state = 119
                self.stmts()
                pass
            elif token in [mygramParser.T__9]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WhContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cond(self):
            return self.getTypedRuleContext(mygramParser.CondContext,0)


        def stmts(self):
            return self.getTypedRuleContext(mygramParser.StmtsContext,0)


        def getRuleIndex(self):
            return mygramParser.RULE_wh

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWh" ):
                listener.enterWh(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWh" ):
                listener.exitWh(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWh" ):
                return visitor.visitWh(self)
            else:
                return visitor.visitChildren(self)




    def wh(self):

        localctx = mygramParser.WhContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_wh)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(mygramParser.T__11)
            self.state = 124
            self.cond(0)
            self.state = 125
            self.stmts()
            self.state = 126
            self.match(mygramParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(mygramParser.ID, 0)

        def e(self):
            return self.getTypedRuleContext(mygramParser.EContext,0)


        def getRuleIndex(self):
            return mygramParser.RULE_io

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIo" ):
                listener.enterIo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIo" ):
                listener.exitIo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIo" ):
                return visitor.visitIo(self)
            else:
                return visitor.visitChildren(self)




    def io(self):

        localctx = mygramParser.IoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_io)
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [mygramParser.T__13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.match(mygramParser.T__13)
                self.state = 129
                self.match(mygramParser.ID)
                pass
            elif token in [mygramParser.T__14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.match(mygramParser.T__14)
                self.state = 131
                self.e(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CondContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def e(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mygramParser.EContext)
            else:
                return self.getTypedRuleContext(mygramParser.EContext,i)


        def Bop(self):
            return self.getToken(mygramParser.Bop, 0)

        def Uop(self):
            return self.getToken(mygramParser.Uop, 0)

        def cond(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(mygramParser.CondContext)
            else:
                return self.getTypedRuleContext(mygramParser.CondContext,i)


        def Lop(self):
            return self.getToken(mygramParser.Lop, 0)

        def getRuleIndex(self):
            return mygramParser.RULE_cond

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond" ):
                listener.enterCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond" ):
                listener.exitCond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond" ):
                return visitor.visitCond(self)
            else:
                return visitor.visitChildren(self)



    def cond(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = mygramParser.CondContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 26
        self.enterRecursionRule(localctx, 26, self.RULE_cond, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [mygramParser.T__3, mygramParser.NUM, mygramParser.ID]:
                self.state = 135
                self.e(0)
                self.state = 136
                self.match(mygramParser.Bop)
                self.state = 137
                self.e(0)
                pass
            elif token in [mygramParser.Uop]:
                self.state = 139
                self.match(mygramParser.Uop)
                self.state = 140
                self.cond(1)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 148
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = mygramParser.CondContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_cond)
                    self.state = 143
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 144
                    self.match(mygramParser.Lop)
                    self.state = 145
                    self.cond(3) 
                self.state = 150
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class AssContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(mygramParser.ID, 0)

        def e(self):
            return self.getTypedRuleContext(mygramParser.EContext,0)


        def getRuleIndex(self):
            return mygramParser.RULE_ass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAss" ):
                listener.enterAss(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAss" ):
                listener.exitAss(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAss" ):
                return visitor.visitAss(self)
            else:
                return visitor.visitChildren(self)




    def ass(self):

        localctx = mygramParser.AssContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_ass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(mygramParser.ID)
            self.state = 152
            self.match(mygramParser.T__15)
            self.state = 153
            self.e(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def t(self):
            return self.getTypedRuleContext(mygramParser.TContext,0)


        def e(self):
            return self.getTypedRuleContext(mygramParser.EContext,0)


        def getRuleIndex(self):
            return mygramParser.RULE_e

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterE" ):
                listener.enterE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitE" ):
                listener.exitE(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitE" ):
                return visitor.visitE(self)
            else:
                return visitor.visitChildren(self)


